Layout: fix icon misalignment in site navigation

--- a/assets/css/_layout/site-navigation.css
+++ b/assets/css/_layout/site-navigation.css
@@ -54,7 +54,7 @@
         padding-right: 23px;
 
         background-image: url("data:image/svg+xml,%3Csvg height='16px' width='25px' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon fill='%23555' points='23.303,-0.002 12.467,10.834 1.63,-0.002 -0.454,2.082 12.467,15.002 14.551,12.918 25.387,2.082'/%3E%3C/svg%3E");
-        background-position: top 52.5% right;
+        background-position: top 54% right;
         background-repeat: no-repeat;
         background-size: 15px;
     }
